--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,10 @@
-theme: jekyll-theme-minimal
+remote_theme: pages-themes/minimal@v0.2.0
+plugins:
+- jekyll-remote-theme 
+
 title: Ravi's homepage
 description: Bookmark this to keep an eye on my project updates!
+
+show_downloads: ["true" or "false" (unquoted) to indicate whether to provide a download URL]
+google_analytics: [Your Google Analytics tracking ID]
+
